fixed last three revision requests regarding small screen spacing issues.

--- a/src/EditRecipe/EditRecipe.css
+++ b/src/EditRecipe/EditRecipe.css
@@ -16,6 +16,10 @@ textarea {
   justify-content: space-evenly;
 }
 
+.EditRecipe__cancel-button {
+  margin-right: 15px;
+}
+
 .EditRecipe__cancel-button:hover {
   background-color: #c8556a;
 }
