--- a/src/Recipe/Recipe.css
+++ b/src/Recipe/Recipe.css
@@ -17,6 +17,7 @@
   border-radius: 3px;
   color: #f0ebeb;
   float: right;
+  margin-right: 8px;
   font-size: 12px;
   height: var(--recipe-button-height);
   position: static;
