--- a/src/RecipeListNav/RecipeListNav.css
+++ b/src/RecipeListNav/RecipeListNav.css
@@ -57,6 +57,9 @@
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
+    margin-left: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
